--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -12,12 +12,12 @@
     schema-style="table"
     default-schema-tab = 'model'
     allow-try="true"
-    show-header="false"
+    show-header="true"
     use-path-in-nav-bar="true"
     heading-text="Potok.io External API"
-    regular-font = "Nunito"
-    mono-font = "Roboto Mono"
     render-style="focused"
+    allow-spec-url-load="true"
+    allow-spec-file-load="false"
     >
         <img slot="nav-logo" src="https://static.tildacdn.com/tild3635-3762-4165-a266-316435626239/Logo_100_22px_author.svg" />
     </rapi-doc>
