--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -19,7 +19,7 @@
     allow-spec-url-load="true"
     allow-spec-file-load= "false"
     >
-        <img slot="nav-logo" src="https://static.tildacdn.com/tild3635-3762-4165-a266-316435626239/Logo_100_22px_author.svg" />
+        <img slot="logo" src="https://static.tildacdn.com/tild3635-3762-4165-a266-316435626239/Logo_100_22px_author.svg" />
     </rapi-doc>
 </body>
 
