--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -16,7 +16,7 @@
     use-path-in-nav-bar="true"
     heading-text="Potok.io External API"
     render-style="focused"
-    allow-spec-url-load="true"
+    allow-spec-url-load="false"
     allow-spec-file-load= "false"
     >
         <img slot="logo" src="https://static.tildacdn.com/tild3635-3762-4165-a266-316435626239/Logo_100_22px_author.svg" />
