--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -19,7 +19,7 @@
     allow-spec-url-load="false"
     allow-spec-file-load= "false"
     >
-        <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" />
+        <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" style="width: 40px;"/>
     </rapi-doc>
 </body>
 
