--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -13,7 +13,7 @@
     default-schema-tab = 'model'
     allow-try="true"
     show-header="true"
-    use-path-in-nav-bar="true"
+    use-path-in-nav-bar="false"
     heading-text="Potok.io External API"
     render-style="focused"
     allow-spec-url-load="false"
