--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -18,6 +18,9 @@
     render-style="focused"
     allow-spec-url-load="false"
     allow-spec-file-load= "false"
+    allow-advanced-search= "false"
+    persist-auth="true"
+    primary-color="#3ccaeb"
     >
         <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" style="width: 40px;"/>
     </rapi-doc>
