--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -21,6 +21,9 @@
     allow-advanced-search= "false"
     persist-auth="true"
     primary-color="#3ccaeb"
+    schema-expand-level="2"
+    schema-description-expanded="true"
+    layout="row"
     >
         <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" style="width: 40px;"/>
     </rapi-doc>
