--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -20,10 +20,11 @@
     allow-spec-file-load= "false"
     allow-advanced-search= "false"
     persist-auth="true"
-    primary-color="#3ccaeb"
+    primary-color="#46b8cf"
     schema-expand-level="2"
     schema-description-expanded="true"
-    layout="row"
+    allow-spec-file-download="true"
+    
     >
         <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" style="width: 40px;"/>
     </rapi-doc>
