--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -18,7 +18,7 @@
     render-style="focused"
     allow-spec-url-load="false"
     allow-spec-file-load= "false"
-    allow-advanced-search= "false"
+    allow-advanced-search= "true"
     persist-auth="true"
     primary-color="#46b8cf"
     schema-expand-level="2"
