--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <title>Potok API</title>
     <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 characters -->
     <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 </head>
