--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -16,7 +16,7 @@
     show-header="true"
     use-path-in-nav-bar="false"
     heading-text="Potok.io External API"
-    render-style="focused"
+    render-style="read"
     allow-spec-url-load="false"
     allow-spec-file-load= "false"
     allow-advanced-search= "true"
