--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -9,7 +9,7 @@
 
 <body>
     <rapi-doc spec-url="public-API.yaml"
-    theme="dark"
+    theme="outerspace"
     schema-style="table"
     default-schema-tab = 'model'
     allow-try="true"
