--- a/rapidoc.htm
+++ b/rapidoc.htm
@@ -10,6 +10,7 @@
 <body>
     <rapi-doc spec-url="public-API.yaml"
     theme="dark"
+    primary-color="#75c1ff"
     schema-style="table"
     default-schema-tab = 'model'
     allow-try="true"
@@ -21,11 +22,12 @@
     allow-spec-file-load= "false"
     allow-advanced-search= "true"
     persist-auth="true"
-    primary-color="#46b8cf"
+    sort-endpoints-by="method"
     schema-expand-level="2"
     schema-description-expanded="true"
     allow-spec-file-download="true"
-    
+    show-method-in-nav-bar = "as-colored-text"
+    info-description-headings-in-navbar="true"    
     >
         <img slot="logo" src="https://336118.selcdn.ru/Gutsy-Culebra/products/potok-Logo.png" style="width: 40px;"/>
     </rapi-doc>
